--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,15 @@ sudo: require
 language: cpp
 os:
   - linux
+install: sudo apt -y install libsfml-dev
 compiler:
   - gcc
 addons:
   apt:
     - sources ubuntu-toolchain-r-test
   packages:
-    - gcc-7
-    - g++-7
-    - libsfml-dev
+    - gcc-7.4
+    - g++-7.4
 notifications:
   email:
     recipients:
@@ -19,7 +19,7 @@ notifications:
     on_success: never
     on_failure: always
 script:
-  - sudo ln -s /usr/bin/gcc-7 /usr/local/bin/gcc
-  - sudo ln -s /usr/bin/g++-7 /usr/local/bin/g++
+  - sudo ln -s /usr/bin/gcc-7.4 /usr/local/bin/gcc
+  - sudo ln -s /usr/bin/g++-7.4 /usr/local/bin/g++
   - make assem_lib
   - make
