Travis ci try4 #830483

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install: sudo apt-get -y install libsfml-dev
 compiler:
   - gcc
 script:
+  - make create
   - make assem_lib
   - make
 notifications:
