Faster building, auto get .c .cpp files

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ install: sudo apt-get -y install libsfml-dev
 compiler:
   - gcc
 script:
-  - make create
-  - make assem_lib
-  - make
+  - make create assem_lib base
 notifications:
   email:
     recipients:
