--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install: sudo apt-get -y install libsfml-dev
 compiler:
   - gcc
 script:
-  - make create assem_lib player server test
+  - make create assem_lib player server
 notifications:
   email:
     recipients:
